--- a/src/components/About.css
+++ b/src/components/About.css
@@ -17,6 +17,7 @@ div.about-desc-container img {
 
 div.what-i-do-container div h2 {
   font-family: "Archivo Black";
+  color: #222222;
 }
 
 div.about-desc-container p {
@@ -41,6 +42,7 @@ div.about-desc-text p {
 div h1 {
   margin-top: 1em;
   font-family: "Archivo Black";
+  color: #222222;
 }
 
 .what-i-do-container {
