--- a/src/components/About.css
+++ b/src/components/About.css
@@ -41,8 +41,18 @@ div.about-desc-text p {
 
 div h1 {
   margin-top: 1em;
+  margin-bottom: 0.4em !important;
   font-family: "Archivo Black";
   color: #222222;
+}
+
+div hr {
+  width: 40%;
+  margin-top: 0;
+  margin-bottom: 0.5em;
+  border: 2px solid rgb(92, 176, 233);
+  background-color: rgb(92, 176, 233);
+  border-radius: 20px;
 }
 
 .what-i-do-container {
