--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -21,10 +21,33 @@ div.contact-container div h1 {
 div.contact-container div p {
   text-align: center;
   margin-top: 0.5em;
+  margin-left: 6em;
+  margin-right: 6em;
+}
+
+.contact-inner-container {
+  margin-bottom: 2em;
 }
 
 div.contact-inner-container i {
   text-decoration: none;
   color: #222222;
-  margin: 20px;
 }
+
+div.contact-inner-container a {
+  margin: 20px;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+@media(max-width: 790px) {
+  div.contact-inner-container a {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
+  div.contact-container div p {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
