--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,7 +11,7 @@ body {
 header {
   width: 100%;
   height: 100vh;
-  background: url("./images/portfolio-banner.jpg") no-repeat 50% 50%;
+  background: url("../images/portfolio-banner.jpg") no-repeat 50% 50%;
   background-size: cover;
 }
 
